--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,9 @@ dependencies {
 
     // for pull to refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+
+    // parceler
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 }
