--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:name=".TwitterApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_twitter"
+        android:logo="@drawable/logo_twitter_white"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <activity android:name=".ComposeActivity" />
         <activity android:name=".TimelineActivity" />
         <activity
             android:name=".LoginActivity"
